--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "http-proxy-middleware": "^2.0.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-loader-spinner": "^5.1.7-beta.1",
     "react-password-strength-bar": "^0.4.1",
+    "react-promise-tracker": "^2.1.0",
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
