--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@ant-design/icons": "^4.7.0",
+    "@azure/storage-blob": "^12.11.0",
     "@chatscope/chat-ui-kit-react": "^1.9.7",
     "@emotion/react": "^11.10.0",
     "@emotion/styled": "^11.10.0",
