--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "react-promise-tracker": "^2.1.0",
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "react-xml-parser": "^1.1.8",
     "redux": "^4.2.0",
     "redux-devtools-extension": "^2.13.9",
